<resources>
    <string name="app_name">Nasa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_template">Astronauts and Consonants sightseeing at Red Square in Moscow</string>
    <string name="original_size_image_url">Original size image (URL):</string>
    <string name="file_size">File size:</string>
    <string name="file_format">File format:</string>
    <string name="nasa_id">NASA ID:</string>
    <string name="keywords">Keywords:</string>
    <string name="center">Center:</string>
    <string name="date_created">Date created:</string>
    <string name="large_text">Acting NASA Administrator Steve Jurczyk places a wreath at the Space Shuttle Challenger Memorial during a ceremony that was part of NASA\'s Day of Remembrance, Thursday, Jan. 28, 2021, at Arlington National Cemetery in Arlington, Va. Wreaths were laid in memory of those men and women who lost their lives in the quest for space exploration. Photo Credit: (NASA/Bill Ingalls)</string>
    <string name="edit_text_temporary_text">images-assets.nasa.gov/image/NHQ202101280006/NHQ202101280006~orig.jpg</string>
    <string name="Nasa_id_template">NHQ202101280006NHQ</string>
    <string name="original_size_file_url">Original size file (URL):</string>
    <string name="nothing_found">Nothing found!</string>
    <string name="search_info_text">53 results returned for "Hello":</string>
    <string name="Type_here_to_search">Type here to search</string>
    <string name="SearchSettingsFragmentTag">SearchSettingsFragment</string>
    <string name="Exo_player_error_message">ExoPlayer loading error</string>
    <string name="mp3_uri_substring">mp3</string>
    <string name="mp4_uri_substring">mp4</string>

    <string-array name="list">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string-array name="rangeSliderValues">
        <item>1920</item>
        <item>2021</item>
    </string-array>
</resources>